--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
   </head>
   <body>
    <div class="container-fluid success-top">
-     <h1 class = "success-heading">Congratulations!</h1>
+     <h1 class = "success-heading">Great!</h1>
      <p class = success-para>you're successfully subscribed.</p>
    </div>
   </body>
