--- a/success.html
+++ b/success.html
@@ -17,7 +17,7 @@
    <div class="container-fluid success-top">
      <h1 class = "success-heading">Great!</h1>
      <p class = success-para>you're successfully subscribed.</p>
-     <form class="" action="/" method="post">
+     <form  action="/success" method="post">
        <button class="btn btn-outline-dark success-btn" type="submit" name="button">Go back</button>
      </form>
    </div>
